--- a/index.html
+++ b/index.html
@@ -2,73 +2,55 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <title>Air Accident Map</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+    <meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
+    <!-- CSS -->
     <link rel="stylesheet" href="/js/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/js/plugins/jquery-jvectormap/jquery-jvectormap-2.0.3.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Aero-Accident Map</title>
   </head>
   <body>
 
-    <main>
-      <div class="row m-0 p-0">
-        <div class="m-0 p-0 col col-md-4 col-xl-3" id="list-container">
-          <h1 class="pt-3 px-3">Aero-Accident Mapp</h1>
-          <p class="lead p-3">This interactive map provides information on general aviation accidents from 1982 to 2017 (35 years).</p>
-          <div class="border-top" id="accident-list"></div>
-        </div>
-        <div class="m-0 p-0 col col-md-8 col-xl-9" id="map-container">
-          <div id="map"></div>
-        </div>
-      </div>
-    </main>
+    <main id="map">
 
-    <!--
-    <main class="container-fluid" id="page-container">
-      <div class="row">
-        <div class="col col-md-3" id="list-container">
-          <div id="accident-list">
-            <div class="card accident-card rounded-0 m-3">
-              <div class="card-body">
-                <h5 class="card-title" id="aircraft">NM714S</h5>
-                <h6 class="card-subtitle mb-2 text-muted" id="location">Houston, TX &bull; Fatal</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <small class="float-left" id="accident-date">Dec 4, 2103</small>
-                <a href="#" class="float-right btn btn-primary">Show</a>
-              </div>
+      <div id="overlay-loader">
+        <div class="d-flex justify-content-center" id="overlay-inner-container">
+          <div class="d-flex align-items-center">
+            <div class="col-md-8 offset-md-2 text-center">
+              <p class="lead font-weight-bold">Air Accident Map</p>
+              <p>Aero-Accident Map is an interactive map that shows general aviation accidents and incidents within the United States from 1962 to 2017. This project is distributed under the MIT License.</p>
+
+              <p class="text-danger font-weight-bold">We make no guarantees that all information is complete and correct and disclaims any warranties, both indirect or direct that result from use of this web appliation. By continuing, you agree to these conditions.</p>
+              <a class="btn btn-primary btn-lg px-5" id="continue" href="javascript:void(0);">Continue</a>
             </div>
           </div>
         </div>
-        <div class="col col-md-9 p-0" style="100vh;">
-          <div id="map" style="width: 100%; height: 100%;"></div>
-        </div>
       </div>
 
+      <!-- List Container -->
+      <div id="list-container">
 
+        <p class="m-0 pt-3 pr-3 text-right">
+          <a class="text-dark" href="close-sideWindow">
+            <i class="material-icons">close</i>
+          </a>
+        </p>
 
+        <div id="accident-list"></div>
+
+      </div>
+      <!-- END List Container -->
     </main>
-    -->
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Include JavaScript -->
     <script src="/js/plugins/jquery/jquery-3.3.1.min.js"></script>
-    <script src="/js/plugins/jquery-ui/jquery-ui.min.js"></script>
     <script src="/js/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- JVectorMap -->
     <script src="js/plugins/jquery-jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
     <script src="js/plugins/jquery-jvectormap/jquery-jvectormap-us-aea.js"></script>
+    <!-- Custom JS -->
     <script src="/js/main.js"></script>
   </body>
 </html>
