Change sources links to work with github pages

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
     <!-- CSS -->
-    <link rel="stylesheet" href="/js/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/js/plugins/jquery-jvectormap/jquery-jvectormap-2.0.3.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="js/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="js/plugins/jquery-jvectormap/jquery-jvectormap-2.0.3.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
@@ -45,12 +45,12 @@
 
 
     <!-- Include JavaScript -->
-    <script src="/js/plugins/jquery/jquery-3.3.1.min.js"></script>
-    <script src="/js/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/plugins/jquery/jquery-3.3.1.min.js"></script>
+    <script src="js/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- JVectorMap -->
     <script src="js/plugins/jquery-jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
     <script src="js/plugins/jquery-jvectormap/jquery-jvectormap-us-aea.js"></script>
     <!-- Custom JS -->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
